--- a/praliner.html
+++ b/praliner.html
@@ -34,10 +34,10 @@
                 </p>
             </article>
         </section>
+        <section id="section11">
+            <h3>MÖRKA PRALINER</h3>
+        </section>
         <section id="section6">
-            <article>
-                <h3>MÖRKA PRALINER</h3>
-            </article>
             <article>
                 <img src="img/svartcitron.png" alt="svart citron pralin">
                 <p><strong>SVART CITRON</strong></p>
@@ -45,39 +45,118 @@
             </article>
             <article>
                 <img src="img/arribaequador.png" alt="arriba equador pralin">
+                <p><strong>ARRIBA EQUADOR</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/solros.jpeg" alt="solros pralin">
+                <p><strong>SOLROS**</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/glogg.png" alt="glögg pralin">
+                <p><strong>GLÖGG</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/hallonhjärta.jpeg" alt="hallon hjärta pralin">
+                <p><strong>HALLONHJÄRTA</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/salt_karamell.jpeg" alt="salt karamell pralin">
+                <p><strong>SALT KARAMELL</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/kaffevanilj.png" alt="kaffe och vanilj pralin">
+                <p><strong>KAFFE & VANILJ</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/saopalme.png" alt="sao palme pralin">
+                <p><strong>SAO PALME</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/franskkola.png" alt="fransk kola pralin">
+                <p><strong>FRANSK KOLA</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/sesamyuzu.jpeg" alt="sesam yuzo pralin">
+                <p><strong>SESAM YUZU</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/veganpassion.jpeg" alt="veganpassion pralin">
+                <p><strong>VEGAN PASSION</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/smogenwhiskey.jpeg" alt="smögen whiskey pralin">
+                <p><strong>SMÖGEN WHISKEY</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/bjornbar.png" alt="björnbärs pralin">
+                <p><strong>BJÖRNBÄR</strong></p>
+                <p>Mörk ganache med citron och lakrits.</p>
+            </article>
+        </section>
+        <section id="section12">
+            <h3>LJUSA PRALINER</h3>
+        </section>
+        <section id="section13">
+            <article>
+                <img src="img/saltmandel.png" alt="salt mandel pralin">
+                <p><strong>SALT MANDEL*</strong></p>
+                <p>Mandelpraliné med saltrostad mandel.</p>
+            </article>
+            <article>
+                <img src="img/hasselnöt.jpeg" alt="hasselnötspralin">
+                <p><strong>HASSELNÖT*</strong></p>
+                <p>Hasselnötspraliné och mörk choklad, doppad i mjölkchoklad. </p>
+            </article>
+            <article>
+                <img src="img/cassisgin.png" alt="cassis gin pralin">
+                <p><strong>CASSIS GIN</strong></p>
+                <p>Mölkchokladganache med svart vinbär och gin.</p>
+            </article>
+            <article>
+                <img src="img/nyponros.png" alt="nyponrospralin">
+                <p><strong>NYPONROS</strong></p>
+                <p>Mjölkchokladganache med nypon och rosenvatten.</p>
+            </article>
+            <article>
+                <img src="img/grankula.png" alt="grankula pralin">
+                <p><strong>GRANKULA</strong></p>
+                <p>Mjölkchokladganache med eterisk olja från svartgran. </p>
+            </article>
+            <article>
+                <img src="img/lime_ingefara.jpeg" alt="lime och ingefära pralin">
+                <p><strong>LIME & INGEFÄRA</strong></p>
+                <p> Ljus ganache med karamell, lime och ingefära.</p>
+            </article>
+        </section>
+        <section id="section14">
+            <h3>VITA PRALINER</h3>
+        </section>
+        <section id="section15">
+            <article>
+                <img src="img/passionsfrukt.png" alt="passionsfruktspralin">
+                <p><strong>PASSIONSFRUKT</strong></p>
+                <p>Vit chokladganache med passionsfrukt och mörk rom.</p>
+            </article>
+            <article>
+                <img src="img/rodaäpplen.png" alt="röda äpplens pralin">
+                <p><strong>RÖDA ÄPPLEN</strong></p>
+                <p>Vit ganache med äpple och röda vinbär.</p>
+            </article>
+            <article>
+                <img src="img/champagne.png" alt="champagne pralin">
+                <p><strong>CHAMPAGNE</strong></p>
+                <p>Vit chokladganache med marc de champagne och cognac.</p>
             </article>
         </section>
         <footer>
