broder den hade lite comittment issues

--- a/abonneracafeet.html
+++ b/abonneracafeet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,88 @@
     <title>AbonneraCaféet</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="wrapperabonnera">
         <nav>samma nav</nav>
-        <header>abonnera caféet</header>
+        <header>
+            <h1>ABONNERA CAFÉET</h1>
+        </header>
+        <section id="section18">
+            <article>
+                <h2>FRUKOST</h2>
+                <h3>
+                    Boka ett trevligt frukostmöte hos oss!
+                    Är ni en grupp mellan 20-45 personer kan ni abonnera vårt café klockan 07.30-09.30.
+                </h3>
+                <img src="img/berzeliicafe.png" alt="caféet ur fokus">
+                <h4>Frukostpaket 1</h4>
+                <ul>
+                    <li>Kaffe, te eller varm choklad</li>
+                    <li>Apelsinjuice</li>
+                    <li>Nybakat bröd med lagrad cheddar och grönsaker</li>
+                    <li>Turkisk yoghurt med bär och vår granola med kakaonibs</li>
+                    <li>Kokt ägg</li>
+                    <li>Frukt</li>
+                    <li>Och så klart en liten chokladtryffel</li>
+                </ul>
+                <p><i>Pris 139 kr/person exkl. 12% moms</i></p>
+            </article>
+            <article>
+                <h4>Frukostpaket 2</h4>
+                <ul>
+                    <li>Kaffe, te eller varm choklad</li>
+                    <li>Apelsinjuice</li>
+                    <li>Två sorters nybakat bröd</li>
+                    <li>Lagrad cheddar, brieost, skinka med vår goda marmelad</li>
+                    <li>Grönsaker</li>
+                    <li>Turkisk yoghurt med bär och vår granola med kakaonibs</li>
+                    <li>Kokt ägg</li>
+                    <li>Frukt</li>
+                    <li>Och så klart en liten chokladtryffel</li>
+                </ul>
+                <p><i>Pris 169 kr/person exkl. 12%moms</i></p>
+            </article>
+        </section>
+        <section id="section19">
+            <article>
+                <h2>KVÄLLAR</h2>
+                <h3>
+                    Är ni ett sällskap på 25-50 personer kan ni abonnera vårt fina café på kvällstid.
+                    Nedan är några förslag på mat.
+                    Vi har numera även serveringstillstånd så vi kan erbjuda öl, vin, och sprit.
+                    Kontakta oss för information på 031-778 166 0 eller 0733 74 92 94.
+                </h3>
+            </article>
+            <article>
+                <img src="img/berzeliimacka.png" alt="räkmacka">
+                <h4>RÄKSMÖRGÅS MED TILLBEHÖR</h4>
+                <ul>
+                    <li>Vår goda räksmörgås med ägg, dillyoghurt och syrad rödlök på grovt bröd.</li>
+                    <li>Ett glas vin, en öl eller alkoholfritt allternativ.</li>
+                    <li>Dessertbakelse och kaffe.</li>
+                </ul>
+                <p>Alternativt vegetarisk eller vegansk smörgås efter överenskommelse.</p>
+                <p><i>Pris 349 kr</i></p>
+                <img src="img/veg_sopp.jpeg" alt="grönsaker">
+                <h4>SOPPBUFFÉ</h4>
+                <ul>
+                    <li>Svamp, jordärtskocka eller rostad paprikasoppa (samma för hela sällskapet).</li>
+                    <li>Färskt bröd, kex, Brie de Meaux, Comte’, lagrad Cheddarost samt kallskuret och sallad.</li>
+                    <li>Dessertbuffé med tre små dessertbakelser och tryfflar.</li>
+                    <li>Kaffe</li>
+                </ul>
+                <p>Alternativt vegansk soppa.</p>
+                <p><i>Pris 349 kr</i></p>
+                <img src="img/bubbel_choklad.jpeg" alt="bakelse och bubbel">
+                <h4>SKRÄDDARSY DIN KVÄLL</h4>
+                <p>
+                    Abonnera vårt café för en riktigt lyckad kväll. Vi skräddarsyr så det passar just dig och ditt sällskap – mat, dryck, choklad och du kan även kombinera med en rolig provning.
+                    Vi har gjort många olika typer av kvällar: bokreleaser, disputationer, after works, bröllop, firmafester och mycket mer.
+                    Kontakta oss gärna så berättar vi mer!
+                </p>
+            </article>   
+        </section>
         <footer>
             <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
             <a href="https://www.facebook.com/berzelii">
@@ -19,4 +98,5 @@
         </footer>
     </div>
 </body>
+
 </html>
