--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="wrapperhem">
         <nav>
+            <img src="img/berzelii_logo.png" alt="">
             <ul>
                 <li><a href="praliner.html">SORTIMENT</a></li>
                 <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
