--- a/praliner.html
+++ b/praliner.html
@@ -159,6 +159,36 @@
                 <p>Vit chokladganache med marc de champagne och cognac.</p>
             </article>
         </section>
+        <section id="section16">
+            <h3>TRYFFLAR</h3>
+        </section>
+        <section id="section17">
+            <article>
+                <img src="img/chilitryffel.jpeg" alt="chilitryffel">
+                <p><strong>CHILITRYFFEL</strong></p>
+                <p>Mörk tryffel med habanerochili.</p>
+            </article>
+            <article>
+                <img src="img/saltcitrontryffel.jpeg" alt="salt citrontyffel">
+                <p><strong>SALT CITRONTRYFFEL</strong></p>
+                <p>Vit tryffel med citron och salt.</p>
+            </article>
+            <article>
+                <img src="img/espressotryffel.jpeg" alt="espressotryffel">
+                <p><strong>ESPRESSOTRYFFEL</strong></p>
+                <p>Mörk ganache med kaffe från <i>Da Matteo</i>.</p>
+            </article>
+            <article>
+                <img src="img/salt_lakritstryffel.jpeg" alt="salt karamell lakritstryffel">
+                <p><strong>SALT KARAMELL LAKRITS</strong></p>
+                <p>Mörk ganache med karamell, lakrits och maldonsalt.</p>
+            </article>
+            <article>
+                <img src="img/muskovadotryffel.jpeg" alt="muscovadotryffel">
+                <p><strong>MUSCOVADOTRYFFEL</strong></p>
+                <p>Mörk ganache med muscovadosocker</p>
+            </article>
+        </section>
         <footer>
             <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
             <a href="https://www.facebook.com/berzelii">
