--- a/praliner.html
+++ b/praliner.html
@@ -11,7 +11,16 @@
 
 <body>
     <div id="wrapperpraliner">
-        <nav>kopiera in nav:en bara</nav>
+        <header id="headerhem">
+            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <nav>
+                <ul>
+                    <li><a href="praliner.html">SORTIMENT</a></li>
+                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
+                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                </ul>
+            </nav>
+        </header>
         <header>
             <h1>PRALINER</h1>
         </header>
@@ -27,7 +36,7 @@
                     I butiken säljer vi även utvalda kakor av förnämlig kvalitet samt mörk choklad av absolut bästa
                     sort.
                 </p>
-                <p><strong>ALLERGIINFO</strong></p>
+                <h5>ALLERGIINFO</h5>
                 <p>
                     Praliner med mandel och nötter är markerade med *. Praliner med gluten markeras med **.
                     Samtliga praliner kan innehålla spår av mandel, nötter och gluten. Alla praliner innehåller laktos.
@@ -40,68 +49,68 @@
         <section id="section6">
             <article>
                 <img src="img/svartcitron.png" alt="svart citron pralin">
-                <p><strong>SVART CITRON</strong></p>
+                <h4>SVART CITRON</h4>
                 <p>Mörk ganache med citron och lakrits.</p>
             </article>
             <article>
                 <img src="img/arribaequador.png" alt="arriba equador pralin">
-                <p><strong>ARRIBA EQUADOR</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>ARRIBA EQUADOR</h4>
+                <p>Mörk ganache av arriba-kakao.</p>
             </article>
             <article>
                 <img src="img/solros.jpeg" alt="solros pralin">
-                <p><strong>SOLROS**</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>SOLROS**</h4>
+                <p>Praliné på rostade solrosfrön.</p>
             </article>
             <article>
                 <img src="img/glogg.png" alt="glögg pralin">
-                <p><strong>GLÖGG</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>GLÖGG</h4>
+                <p>Mörk ganache med glögg och julkryddor.</p>
             </article>
             <article>
                 <img src="img/hallonhjärta.jpeg" alt="hallon hjärta pralin">
-                <p><strong>HALLONHJÄRTA</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>HALLONHJÄRTA</h4>
+                <p>Mörk ganache med hallon.</p>
             </article>
             <article>
                 <img src="img/salt_karamell.jpeg" alt="salt karamell pralin">
-                <p><strong>SALT KARAMELL</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>SALT KARAMELL</h4>
+                <p>Mörk ganache med karamell och maldonsalt.</p>
             </article>
             <article>
                 <img src="img/kaffevanilj.png" alt="kaffe och vanilj pralin">
-                <p><strong>KAFFE & VANILJ</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>KAFFE & VANILJ</h4>
+                <p>Mörk ganache med Kenyakaffe och vanilj.</p>
             </article>
             <article>
                 <img src="img/saopalme.png" alt="sao palme pralin">
-                <p><strong>SAO PALME</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>SAO PALME</h4>
+                <p>Mörk ganache på Sao palme-kakao, vegansk.</p>
             </article>
             <article>
                 <img src="img/franskkola.png" alt="fransk kola pralin">
-                <p><strong>FRANSK KOLA</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>FRANSK KOLA</h4>
+                <p>Mörk chokladkola.</p>
             </article>
             <article>
                 <img src="img/sesamyuzu.jpeg" alt="sesam yuzo pralin">
-                <p><strong>SESAM YUZU</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>SESAM YUZU</h4>
+                <p>Vit och mörk sesamfröpraliné med vit yuzuganache, doppad i mörk choklad.</p>
             </article>
             <article>
                 <img src="img/veganpassion.jpeg" alt="veganpassion pralin">
-                <p><strong>VEGAN PASSION</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>VEGAN PASSION</h4>
+                <p>Mörk ganache med passionsfrukt, doppad i mörk choklad.</p>
             </article>
             <article>
                 <img src="img/smogenwhiskey.jpeg" alt="smögen whiskey pralin">
-                <p><strong>SMÖGEN WHISKEY</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>SMÖGEN WHISKEY</h4>
+                <p>Mörk ganache med Smögenwhisky.</p>
             </article>
             <article>
                 <img src="img/bjornbar.png" alt="björnbärs pralin">
-                <p><strong>BJÖRNBÄR</strong></p>
-                <p>Mörk ganache med citron och lakrits.</p>
+                <h4>BJÖRNBÄR</h4>
+                <p>Mörk ganache med björnbär.</p>
             </article>
         </section>
         <section id="section12">
@@ -110,32 +119,32 @@
         <section id="section13">
             <article>
                 <img src="img/saltmandel.png" alt="salt mandel pralin">
-                <p><strong>SALT MANDEL*</strong></p>
+                <h4>SALT MANDEL*</h4>
                 <p>Mandelpraliné med saltrostad mandel.</p>
             </article>
             <article>
                 <img src="img/hasselnöt.jpeg" alt="hasselnötspralin">
-                <p><strong>HASSELNÖT*</strong></p>
+                <h4>HASSELNÖT*</h4>
                 <p>Hasselnötspraliné och mörk choklad, doppad i mjölkchoklad. </p>
             </article>
             <article>
                 <img src="img/cassisgin.png" alt="cassis gin pralin">
-                <p><strong>CASSIS GIN</strong></p>
+                <h4>CASSIS GIN</h4>
                 <p>Mölkchokladganache med svart vinbär och gin.</p>
             </article>
             <article>
                 <img src="img/nyponros.png" alt="nyponrospralin">
-                <p><strong>NYPONROS</strong></p>
+                <h4>NYPONROS</h4>
                 <p>Mjölkchokladganache med nypon och rosenvatten.</p>
             </article>
             <article>
                 <img src="img/grankula.png" alt="grankula pralin">
-                <p><strong>GRANKULA</strong></p>
+                <h4>GRANKULA</h4>
                 <p>Mjölkchokladganache med eterisk olja från svartgran. </p>
             </article>
             <article>
                 <img src="img/lime_ingefara.jpeg" alt="lime och ingefära pralin">
-                <p><strong>LIME & INGEFÄRA</strong></p>
+                <h4>LIME & INGEFÄRA</h4>
                 <p> Ljus ganache med karamell, lime och ingefära.</p>
             </article>
         </section>
@@ -145,17 +154,17 @@
         <section id="section15">
             <article>
                 <img src="img/passionsfrukt.png" alt="passionsfruktspralin">
-                <p><strong>PASSIONSFRUKT</strong></p>
+                <h4>PASSIONSFRUKT<h4>
                 <p>Vit chokladganache med passionsfrukt och mörk rom.</p>
             </article>
             <article>
                 <img src="img/rodaäpplen.png" alt="röda äpplens pralin">
-                <p><strong>RÖDA ÄPPLEN</strong></p>
+                <h4>RÖDA ÄPPLEN</h4>
                 <p>Vit ganache med äpple och röda vinbär.</p>
             </article>
             <article>
                 <img src="img/champagne.png" alt="champagne pralin">
-                <p><strong>CHAMPAGNE</strong></p>
+                <h4>CHAMPAGNE</h4>
                 <p>Vit chokladganache med marc de champagne och cognac.</p>
             </article>
         </section>
@@ -165,27 +174,27 @@
         <section id="section17">
             <article>
                 <img src="img/chilitryffel.jpeg" alt="chilitryffel">
-                <p><strong>CHILITRYFFEL</strong></p>
+                <h4>CHILITRYFFEL</h4>
                 <p>Mörk tryffel med habanerochili.</p>
             </article>
             <article>
                 <img src="img/saltcitrontryffel.jpeg" alt="salt citrontyffel">
-                <p><strong>SALT CITRONTRYFFEL</strong></p>
+                <h4>SALT CITRONTRYFFEL</h4>
                 <p>Vit tryffel med citron och salt.</p>
             </article>
             <article>
                 <img src="img/espressotryffel.jpeg" alt="espressotryffel">
-                <p><strong>ESPRESSOTRYFFEL</strong></p>
+                <h4>ESPRESSOTRYFFEL</h4>
                 <p>Mörk ganache med kaffe från <i>Da Matteo</i>.</p>
             </article>
             <article>
                 <img src="img/salt_lakritstryffel.jpeg" alt="salt karamell lakritstryffel">
-                <p><strong>SALT KARAMELL LAKRITS</strong></p>
+                <h4>SALT KARAMELL LAKRITS</h4>
                 <p>Mörk ganache med karamell, lakrits och maldonsalt.</p>
             </article>
             <article>
                 <img src="img/muskovadotryffel.jpeg" alt="muscovadotryffel">
-                <p><strong>MUSCOVADOTRYFFEL</strong></p>
+                <h4>MUSCOVADOTRYFFEL</h4>
                 <p>Mörk ganache med muscovadosocker</p>
             </article>
         </section>
