--- a/provningar.html
+++ b/provningar.html
@@ -9,8 +9,17 @@
 </head>
 <body>
     <div id="wrapperprovningar">
-        <nav>samma nav</nav>
-        <header>bild</header>
+        <header id="headerhem">
+            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <nav>
+                <ul>
+                    <li><a href="praliner.html">SORTIMENT</a></li>
+                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
+                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                </ul>
+            </nav>
+        </header>
+        <header><h1>VIN- OCH CHOKLADPROVNINGAR</h1></header>
         <aside>en aside?</aside>
         <footer>
             <p>Berzelii Choklad | Magasinsgatan 12, Göteborg</p>
