--- a/abonneracafeet.html
+++ b/abonneracafeet.html
@@ -11,7 +11,16 @@
 
 <body>
     <div id="wrapperabonnera">
-        <nav>samma nav</nav>
+        <header id="headerhem">
+            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <nav>
+                <ul>
+                    <li><a href="praliner.html">SORTIMENT</a></li>
+                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
+                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                </ul>
+            </nav>
+        </header>
         <header>
             <h1>ABONNERA CAFÉET</h1>
         </header>
