--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 
 <body>
     <div id="wrapperhem">
-        <nav>
-            <img src="img/berzelii_logo.png" alt="">
-            <ul>
-                <li><a href="praliner.html">SORTIMENT</a></li>
-                <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
-                <li><a href="provningar.html">PROVNINGAR</a></li>
-            </ul>
-        </nav>
+        <header id="headerhem">
+            <div id="hamburgermeny" onclick="toggleMenu()">
+                <div id="line1"></div>
+                <div id="line2"></div>
+                <div id="line3"></div>
+            </div>
+            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <nav>
+                <ul>
+                    <li><a href="praliner.html">SORTIMENT</a></li>
+                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
+                    <li><a href="provningar.html">PROVNINGAR</a></li>
+                </ul>
+            </nav>
+        </header>
         <section id="section1">
             <h1>Café och butik</h1>
             <img src="img/Cafeochbutikcafe.jpg" alt="butiken">
@@ -44,7 +51,7 @@
                     Vi provar fyra högklassiga viner med 6 rena bean to bar-choklader samt sex praliner från vår egen
                     tillverkning.
                 </p>
-                <p><strong>Pris 539 kr</strong></p>
+                <h3>Pris 539 kr</h3>
             </article>
             <article>
                 <img src="img/berzeliimacka.png" alt="lyxig räkmacka med ett glas öl">
@@ -56,9 +63,9 @@
                     Ge bort ett presentkort och passa på att gå med själv.
                     Den som får presentkortet kan sedan själv anmäla sig till ett passande datum.
                 </p>
-                <p><strong>Pris 395 kr</strong></p>
+                <h3>Pris 395 kr</h3>
                 <p>
-                    <strong>2023</strong>
+                    <h3>2023</h3>
                 <ul>
                     <li>Torsdag 16 februari</li>
                     <li>Torsdag 23 mars FULLBOKAD</li>
@@ -74,7 +81,7 @@
                     dagens lunch.
                     Vi har även Veckans Veganska Soppa. Till soppan ingår även en god sandwich och sallad.
                 </p>
-                <p><strong>Pris 95 kr</strong></p>
+                <h3>Pris 95 kr</h3>
             </article>
         </section>
         <section id="section3">
