--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <div id="line2"></div>
                 <div id="line3"></div>
             </div>
-            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <a href="index.html"><img src="img/berzelii_logo.png" alt="berzelii choklad logga"></a>
             <nav>
                 <ul>
                     <li><a href="praliner.html">PRALINER</a></li>
-                    <li><a href="abonneracafeet.html">TÅRTOR OCH DESSERTER</a></li>
+                    <li><a href="desserter.html">TÅRTOR OCH DESSERTER</a></li>
                     <li><a href="presentaskar.html">PRESENTASKAR</a></li>
-                    <li><a href="provningar.html">ABONNERA CAFÉET</a></li>
+                    <li><a href="abonneracafeet.html">ABONNERA CAFÉET</a></li>
                 </ul>
             </nav>
         </header>
