--- a/praliner.html
+++ b/praliner.html
@@ -12,7 +12,7 @@
 <body>
     <div id="wrapperpraliner">
         <header id="headerhem">
-            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <a href="index.html"><img src="img/berzelii_logo.png" alt="berzelii choklad logga"></a>
             <nav>
                 <ul>
                     <li><a href="praliner.html">PRALINER</a></li>
