--- a/presentaskar.html
+++ b/presentaskar.html
@@ -17,7 +17,7 @@
                 <div id="line2"></div>
                 <div id="line3"></div>
             </div>
-            <img src="img/berzelii_logo.png" alt="berzelii choklad logga">
+            <a href="index.html"><img src="img/berzelii_logo.png" alt="berzelii choklad logga"></a>
             <nav>
                 <ul>
                     <li><a href="praliner.html">PRALINER</a></li>
